<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>abb_egm_messages</name>
  <version>0.1.0</version>
  <description>Message definitions for EGM communication</description>
  <maintainer email="bwmn.peter@gmail.com">Bartek Łukawski</maintainer>
  <license>LGPL v2.1</license>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>
</package>
